--- a/API Pokemon/UnitPrincipal.fmx
+++ b/API Pokemon/UnitPrincipal.fmx
@@ -15,7 +15,7 @@ object Form1: TForm1
     Size.Width = 433.000000000000000000
     Size.Height = 699.000000000000000000
     Size.PlatformDefault = False
-    TabIndex = 0
+    TabIndex = 1
     TabOrder = 0
     TabPosition = None
     Sizes = (
@@ -29,7 +29,7 @@ object Form1: TForm1
       CustomIcon = <
         item
         end>
-      IsSelected = True
+      IsSelected = False
       Size.Width = 8.000000000000000000
       Size.Height = 8.000000000000000000
       Size.PlatformDefault = False
@@ -134,6 +134,8 @@ object Form1: TForm1
             AppearanceObjectName = 'Text1'
             AppearanceClassName = 'TTextObjectAppearance'
           end>
+        CanSwipeDelete = False
+        OnItemClick = lvPokemonItemClick
         PullToRefresh = True
         PullRefreshWait = True
       end
@@ -142,7 +144,7 @@ object Form1: TForm1
       CustomIcon = <
         item
         end>
-      IsSelected = False
+      IsSelected = True
       Size.Width = 8.000000000000000000
       Size.Height = 8.000000000000000000
       Size.PlatformDefault = False
@@ -157,7 +159,7 @@ object Form1: TForm1
         Size.Height = 281.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
-        object Image2: TImage
+        object imgPoke: TImage
           MultiResBitmap = <
             item
             end>
